# VApp

./: .gitignore  README.md  VApp.sln  Vehicles.drawio
SQL_PoC/: CMakeLists.txt  ISqlWorker.h  main.cpp  serializationsql.cpp  serializationsql.h  sqlworker.cpp  sqlworker.h  tst_base.cpp
SQL_PoC/SQL_Tests/: CMakeLists.txt  main.cpp  tst_sql_base_tests.cpp
VApp/: CarCosts.cpp  CarCosts.h  CarEvent.cpp  CarEvent.h  Database.cpp  Database.h  Owner.cpp  Owner.h  ServiceBook.cpp  ServiceBook.h  ServiceBookEvent.cpp  ServiceBookEvent.h  VApp.cpp  VApp.vcxproj  VApp.vcxproj.filters  Vehicle.cpp  Vehicle.h  default.db  firstDb_2.db
VApp/x64/Debug/: VApp.exe.recipe  vc143.idb
VApp/x64/Debug/VApp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  VApp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
untitled2/: CMakeLists.txt  carbook.cpp  carbook.h  carevent.cpp  carevent.h  main.cpp  programdatabase.cpp  programdatabase.h  tst_base.cpp  tst_main_app_class_mechanics.cpp  vehicle.cpp  vehicle.h
untitled2/GTests/: main.cpp  tst_classtest.cpp
untitled2/UnitTests/UnitTests/: CMakeLists.txt  tst_classestests.cpp
